--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>0.1 -- BETA</version>
         <configuration>
           <archive>
             <manifest>
